--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,5 @@
 <form action="/registerAuth" method="POST">
+  <h1>Register</h1>
   <input type="text" name="username" placeholder="username"/> </br>
   <input type="password" name="password" placeholder="password"/> </br>
   <input type="submit" value = Register />
