--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <form action="/post" method="POST">
-	<h1>Welcome {{fname}}</h1> 
+	<h1>Welcome {{fname}} {{lname}}</h1>
 	<input type="text" name = "blog" placeholder="post" required/> </br>
 	<input type="submit" value = Post />
 </form>
