--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,17 @@
+<html>
+<head>
+</head>
+<body>
+
 <form action="/loginAuth" method="POST">
-  <h1>Login</h1>
-  <input type="text" name="email" placeholder="email" required/> </br>
-  <input type="password" name="email_password" placeholder="password" required/> </br>
-  <input type="submit" value = Login>
-  {% if error %}
-    <p class="error"><strong>Error:</strong> {{error}}</p>
-  {% endif %}
+	<input type="text" name="email" placeholder="email" required/> </br>
+	<input type="password" name="password" placeholder="password" required/> </br>
+	<input type="submit" value = Login />
+	{% if error %}
+		<p class="error"><strong>Error:</strong> {{error}}</p>
+	{% endif %}
 </form>
+    <a href="/">Go back</a>
+
+</body>
+</html>
