--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,10 @@
 <form action="/registerAuth" method="POST">
-  <h1>Register</h1>
-  <input type="text" name="email" placeholder="email"/> </br>
-  <input type="password" name="email_password" placeholder="password"/> </br>
+	<input type="text" name="email" placeholder="email"/> </br>
+  <input type="password" name="password" placeholder="password"/> </br>
   <input type="text" name="fname" placeholder="First Name"/> </br>
   <input type="text" name="lname" placeholder="Last Name"/> </br>
-  <input type="submit" value = Register />
-  {% if error %}
-    <p class="error"><strong>Error:</strong> {{error}}</p>
-  {% endif %}
+	<input type="submit" value = Register />
+	{% if error %}
+		<p class="error"><strong>Error:</strong> {{error}}</p>
+	{% endif %}
 </form>
