--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 <body>
 
 <form action="/loginAuth" method="POST">
+    <h1>Login</h1>
 	<input type="text" name="email" placeholder="email" required/> </br>
 	<input type="password" name="password" placeholder="password" required/> </br>
 	<input type="submit" value = Login />
