--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   </style>
 
 <br>
-Here are the most recent posts in the last 24 hours:
+Here are the most recent public posts in the last 24 hours:
 
 <table>
   <th>Item ID</th>
