--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <body>
 <form action="/post" method="POST">
 	<center>
-	<h1>Welcome {{name.fname}} {{name.lname}}</h1>
+	<h1>Welcome {{name.fname}} {{name.lname}}!</h1>
 	<input type="text" name = "blog" placeholder="post" required/> </br>
 	<input type="submit" value = Post />
 </form>
@@ -12,6 +12,9 @@
 <style type="text/css">
 	table, th, td{
 		border: 1px solid black;
+	}
+	h1{
+		font-family: Georgia;
 	}
 </style>
 
