--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,14 @@
 	<a href="/login">Login</a>
 
 	<a href="/register">Register</a>
-
+  <br>
   <style type="text/css">
   	table, th, td{
   		border: 1px solid black;
   	}
+    h1{
+      font-family: Georgia;
+    }
   </style>
 
 <br>
