--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+</head>
+<body>
+
 <form action="/registerAuth" method="POST">
 	<input type="text" name="email" placeholder="email"/> </br>
   <input type="password" name="password" placeholder="password"/> </br>
@@ -8,3 +13,6 @@
 		<p class="error"><strong>Error:</strong> {{error}}</p>
 	{% endif %}
 </form>
+
+</body>
+</html>
