starting to make it look pretty

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,18 @@
 <html>
 <head>
+    <style>
+        body {background-color: powderblue;}
+        h1   {color: blue;}
+        table {
+            border-collapse: collapse;
+        }
+    
+    td, th {
+        border: 1px solid #999;
+        padding: 0.5rem;
+        text-align: left;
+    }
+    </style>
 </head>
 <body>
 <form action="/post" method="POST">
