Fix public: so person can only make one choice

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,8 +19,8 @@
 	<center>
 	<h1>Welcome {{name.fname}} {{name.lname}}!</h1>
 	<input type="text" name = "post_name" placeholder="Post Name" required/>
-  Public: Yes<input type="checkbox" name = "public" value = "1" />
-  No<input type="checkbox" name = "public" value = "0" />
+  Public: Yes<input type="radio" name = "public" value = "1" />
+  No<input type="radio" name = "public" value = "0" checked/>
 	<input type="submit" value = Post />
 </form>
 
