--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,50 @@
 <html>
 <head>
-    <style>
-        body {background-color: powderblue;}
-        h1   {color: blue;}
-        table {
-            border-collapse: collapse;
-        }
+  <style type="text/css">
+    body {
+					background-color: powderblue;
+					margin: 0 auto;
+		}
+    table, td, th{
+      border: 1px solid black;
+    }
 
+    table {
+            border-collapse: collapse;
+    }
     td, th {
-        border: 1px solid #999;
         padding: 0.5rem;
         text-align: left;
     }
+		header {
+  		background-color: #466995;
+  		border-bottom: 1px solid #466995;
+  		width: 100%;
+		}
+		li{
+			color: white;
+			display: inline-block;
+			width: 200px;
+		}
+    h1{
+  		font-family: Georgia;
+      color: blue;
+  	}
     </style>
 </head>
 <body>
+<center>
+
+<nav>
+	 <header>
+	    <ul>
+	      <a href ="/home"><li>HOME</li></a>
+				<a href ="/friendgroup"><li>FRIENDS</li></a>
+				<a href ="/home"><li>SHARED/GEO POSTS</li></a>
+	    </ul>
+	  </header>
+</nav>
+
 <form action="/post" method="POST">
 	<center>
 	<h1>Welcome {{name.fname}} {{name.lname}}!</h1>
@@ -24,14 +54,7 @@
 	<input type="submit" value = Post />
 </form>
 
-<style type="text/css">
-	table, th, td{
-		border: 1px solid black;
-	}
-	h1{
-		font-family: Georgia;
-	}
-</style>
+
 
 <br>
 Here are the most recent public posts in the last 24 hours:
@@ -87,13 +110,14 @@ Tags Awaiting Approval:
 <table>
   <th>Item ID</th>
 	<th>Tagger</th>
+	<th>Accept or Decline Tag</th>
 
 {% for line in tags %}
 	<tr>
 		<td>{{line.item_id}}</td>
 		<td>{{line.email_tagger}}</td>
-		<form action="/accept_tag" method="POST">
-		<input type="submit" name ="post" value = "Accept" value = "1" />
+		<form action="/_tag" method="POST">
+		<td><input type="submit" name ="tag" value = "Accept" /><input type="submit" name ="tag" value = "Decline" /></td>
   	</form>
 	</tr>
 {% endfor %}
