--- a/templates/show_posts.html
+++ b/templates/show_posts.html
@@ -1,28 +1,50 @@
 <html>
 <head>
 	<style type="text/css">
-		table, th, td{
-			border: 1px solid black;
+    body {
+					background-color: powderblue;
+					margin: 0 auto;
 		}
-		table {
-				border-collapse: collapse;
-		}
+    table, td, th{
+      border: 1px solid black;
+    }
 
-		td, th {
-		border: 1px solid #999;
-		padding: 0.5rem;
-		text-align: left;
+    table {
+            border-collapse: collapse;
+    }
+    td, th {
+        padding: 0.5rem;
+        text-align: left;
+    }
+		header {
+  		background-color: #466995;
+  		border-bottom: 1px solid #466995;
+  		width: 100%;
 		}
-		body {
-			background-color: powderblue;
+		li{
+			color: white;
+			display: inline-block;
+			width: 200px;
 		}
-	</style>
+    h1{
+  		font-family: Georgia;
+      color: blue;
+  	}
+    </style>
 </head>
 <body>
 <center>
+	<nav>
+		 <header>
+		    <ul>
+		      <a href ="/home"><li>HOME</li></a>
+					<a href ="/home"><li>FRIENDS</li></a>
+					<a href ="/home"><li>SHARED/GEO POSTS</li></a>
+		    </ul>
+		  </header>
+	</nav>
 
-
-Here are the post details:
+<h1>Here are the post details:</h1>
 <br>
 Basic Info:
 <table>
@@ -45,14 +67,15 @@ Basic Info:
 	{% endfor %}
 </table>
 <br>
-Comments:
+Comments and Ratings:
 
 <br>
-<textarea name="comment" cols="40" rows="5"></textarea>
+<textarea name="comment" cols="40" rows="5" placeholder="(Limited to 140 characters)"></textarea>
 <br>
 <input type="submit" value = "Add a comment" />
 <br>
 <br>
+
 Friends Tagged in Picture:
 <table>
 	<table>
