--- a/templates/register.html
+++ b/templates/register.html
@@ -16,6 +16,7 @@
 		<p class="error"><strong>Error:</strong> {{error}}</p>
 	{% endif %}
 </form>
-
+<br>
+  <a href="/">Go back</a>
 </body>
 </html>
