--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,10 @@
     </style>
 </head>
 <body>
-
+<center>
 <form action="/loginAuth" method="POST">
     <h1>Login</h1>
-	<input type="text" name="email" placeholder="email" required/> </br>
+	<input type="email" name="email" placeholder="email" required/> </br>
 	<input type="password" name="password" placeholder="password" required/> </br>
 	<input type="submit" value = Login />
 	{% if error %}
@@ -16,6 +16,6 @@
 	{% endif %}
 </form>
     <a href="/">Go back</a>
-
+</center>
 </body>
 </html>
