--- a/templates/register.html
+++ b/templates/register.html
@@ -5,9 +5,9 @@
     </style>
 </head>
 <body>
-
+<center>
 <form action="/registerAuth" method="POST">
-	<input type="text" name="email" placeholder="email"/> </br>
+	<input type="email" name="email" placeholder="email"/> </br>
   <input type="password" name="password" placeholder="password"/> </br>
   <input type="text" name="fname" placeholder="First Name"/> </br>
   <input type="text" name="lname" placeholder="Last Name"/> </br>
@@ -18,5 +18,6 @@
 </form>
 <br>
   <a href="/">Go back</a>
+</center>
 </body>
 </html>
