--- a/templates/show_group.html
+++ b/templates/show_group.html
@@ -65,7 +65,7 @@ Members:
 
 
 Add Member:
-<form action="/add_member" method="POST">
+<form action="/invite_member" method="POST">
 <input type="text" name="member" placeholder="Member email" />
 <input type="submit" value="Add Member">
 </form>
