--- a/templates/show_visibleposts.html
+++ b/templates/show_visibleposts.html
@@ -34,7 +34,7 @@
 		    <ul>
 		      <a href ="/home"><li>HOME</li></a>
 					<a href ="/friendgroup"><li>FRIENDS</li></a>
-					<a href ="/home"><li>SHARED/GEO POSTS</li></a>
+					<a href ="/shared"><li>SHARED/GEO POSTS</li></a>
 		    </ul>
 		  </header>
 	</nav>
