--- a/templates/show_group.html
+++ b/templates/show_group.html
@@ -66,7 +66,8 @@ Members:
 
 Add Member:
 <form action="/invite_member" method="POST">
-<input type="text" name="member" placeholder="Member email" />
+<input type="text" name="fmember" placeholder="First Name" />
+<input type="text" name="lmember" placeholder="Last Name" />
 <input type="submit" value="Add Member">
 </form>
 
