--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,10 @@
 <center>
 <h1>Welcome {{name.fname}} {{name.lname}}!</h1>
 
+{% if error %}
+    <p class="error"><strong>Error:</strong> {{error}}</p>
+{% endif %}
+
 <form action="/post" method="POST">
 	<input type="text" name = "post_name" placeholder="Post Name" required/>
   File Path: <input type="text" name="file_path" placeholder="File Path" />
