--- a/templates/show_belonggroup.html
+++ b/templates/show_belonggroup.html
@@ -39,7 +39,7 @@
 		    <ul>
 		      <a href ="/home"><li>HOME</li></a>
 					<a href ="/friendgroup"><li>FRIENDS</li></a>
-					<a href ="/shared"><li>SHARED/GEO POSTS</li></a>
+					<a href ="/shared"><li>SHARED/TOP RATED POSTS</li></a>
 		    </ul>
 		  </header>
 	</nav>
