--- a/templates/show_posts.html
+++ b/templates/show_posts.html
@@ -34,7 +34,7 @@
 		    <ul>
 		      <a href ="/home"><li>HOME</li></a>
 					<a href ="/friendgroup"><li>FRIENDS</li></a>
-					<a href ="/shared"><li>SHARED/GEO POSTS</li></a>
+					<a href ="/shared"><li>SHARED/TOP RATED POSTS</li></a>
 		    </ul>
 		  </header>
 	</nav>
@@ -105,7 +105,7 @@ Comments:
     <table>
         <th>Email</th>
         <th>Comment</th>
-        
+
         {% for line in comments %}
         <tr>
             <td>{{line.email}}</td>
@@ -114,13 +114,13 @@ Comments:
         {% endfor %}
     </table>
 <br>
-    
+
 Ratings:
 <table>
     <table>
         <th>Email</th>
         <th>Rating</th>
-        
+
         {% for line in ratings %}
         <tr>
             <td>{{line.email}}</td>
@@ -128,7 +128,7 @@ Ratings:
         </tr>
         {% endfor %}
     </table>
-    
+
     <br>
 
 Friends Tagged in Picture:
@@ -155,6 +155,7 @@ Friends Tagged in Picture:
 <form action="/tag_group" method="POST">
 	{% for line in groups %}
 	{{line.fg_name}} with owner({{line.owner_email}}):<input type = "radio" name = "FriendGroupTag" value="{{line.fg_name}}"><input type = "hidden" name = "FriendGroupOwner" value = "{{line.owner_email}}"></input></input>
+	<br>
 	{% endfor %}
 	<input type="submit" value = "Add a friendGroupTag" />
 </form>
