Changing the font

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,14 @@
 <html>
 
 <head>
-    <style>
-        body {background-color: powderblue;}
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+        
+    <style type="text/css">
+        body {
+            background-color: powderblue;
+            font-family: 'Open Sans Condensed', sans-serif;
+        }
         h1   {color: blue;}
         table {
             border-collapse: collapse;
