--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,13 @@
 <html>
 <head>
-    <style>
-        body {background-color: powderblue;}
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+        
+    <style type="text/css">
+    body {
+        background-color: powderblue;
+        font-family: 'Open Sans Condensed', sans-serif;
+    }
     </style>
 </head>
 <body>
