--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,25 @@
 <html>
 <head>
-  <style type="text/css">
-    body {
-					background-color: powderblue;
-					margin: 0 auto;
-		}
-    table, td, th{
-      border: 1px solid black;
-    }
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+        
+        <style type="text/css">
+        body {
+            background-color: powderblue;
+            font-family: 'Open Sans Condensed', sans-serif;
+            margin: 0 auto;
+        }
+        table, td, th{
+            border: 1px solid black;
+        }
 
-    table {
+        table {
             border-collapse: collapse;
-    }
-    td, th {
-        padding: 0.5rem;
-        text-align: left;
-    }
+        }
+        td, th {
+            padding: 0.5rem;
+            text-align: left;
+        }
 		header {
   		background-color: #466995;
   		border-bottom: 1px solid #466995;
@@ -27,7 +31,6 @@
 			width: 200px;
 		}
     h1{
-  		font-family: Georgia;
       color: blue;
   	}
     </style>
