--- a/templates/show_belonggroup.html
+++ b/templates/show_belonggroup.html
@@ -1,10 +1,14 @@
 <html>
 <head>
-	<style type="text/css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+        
+    <style type="text/css">
     body {
-					background-color: powderblue;
-					margin: 0 auto;
-		}
+        background-color: powderblue;
+        font-family: 'Open Sans Condensed', sans-serif;
+        margin: 0 auto;
+    }
     table, td, th{
       border: 1px solid black;
     }
