--- a/templates/show_posts.html
+++ b/templates/show_posts.html
@@ -1,9 +1,13 @@
 <html>
 <head>
-	<style type="text/css">
-	body {
-		background-color: powderblue;
-		margin: 0 auto;
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+        
+    <style type="text/css">
+    body {
+        background-color: powderblue;
+        font-family: 'Open Sans Condensed', sans-serif;
+        margin: 0 auto;
 	}
 	h1   {color: blue;}
 	table {
