Fix fonts and small errors

--- a/templates/friendgroup.html
+++ b/templates/friendgroup.html
@@ -30,7 +30,6 @@
       width: 200px;
     }
     h1{
-      font-family: Georgia;
       color: blue;
     }
     </style>
@@ -93,7 +92,7 @@ Group Invite Pending:
 <table>
   <th>Owner</th>
   <th>Group Name</th>
-  <th>Accept or Decline Tag</th>
+  <th>Accept or Decline Invite</th>
 
 {% for line in members %}
   <tr>
