Edit button CSS

--- a/templates/show_publicposts.html
+++ b/templates/show_publicposts.html
@@ -130,7 +130,7 @@ Friends Tagged in Picture:
 
 <br>
 <form action="/tag" method="POST">
-	<input type="text" name="friendTag" placeholder="Tagged" /> </br>
+	<input type="text" name="friendTag" placeholder="Tagged Email" /> </br>
 	<input type="submit" value = "Add a friendTag" />
 </form>
 <br>
