--- a/templates/show_posts.html
+++ b/templates/show_posts.html
@@ -29,6 +29,17 @@
 		display: inline-block;
 		width: 200px;
 	}
+    input[type="submit"] {
+        background-color: #75a7f9;
+        border: solid;
+        color: white;
+        text-align: center;
+        display: inline-block;
+        font-size: 12px;
+        margin: 1px 1px;
+        cursor: pointer;
+        border-radius: 25px;
+    }
 	</style>
 </head>
 <body>
@@ -65,27 +76,7 @@ Basic Info:
 	</tr>
 	{% endfor %}
 </table>
-<br>
-<br>
 
-<form action="/edit_post" method="POST">
-	Item Name: <input type="text" name="item_name" placeholder="Item Name" />
-	File Path: <input type="text" name="file_path" placeholder="File Path" />
- </br>
-	<input type="submit" value = "Edit Post" />
-</form>
-<br>
-
-{% for line in groups %}
-<form action="/share_post" method = "POST">
-{{line.fg_name}}:<input type = "radio" name = "group" value="{{line.fg_name}}"><input type = "hidden" name = "owner" value = "{{line.owner_email}}"></input></input>
-{% endfor %}
-  <br><br>
-  <input type="submit" value = "Share Post">
-</form>
-
-
-<br>
 Comment:
 <br>
 <form action='/comment' method="POST">
@@ -93,15 +84,45 @@ Comment:
     <br>
     <input type="submit" name="the_comment" value = "Add a comment" />
 </form>
-<br>
 
 <form action="/rate" method = "POST">
     Rate:
     😍<input type="radio" name="emoji" value="1" />
     😂<input type = "radio" name="emoji" value="2" />
     👍<input type="radio" name="emoji" value="3" />
+    <br>
     <input type="submit" value=rate />
 </form>
+
+<form action="/tag" method="POST">
+    <input type="text" name="friendTag" placeholder="Tagged" /> </br>
+    <input type="submit" value = "Add a friendTag" />
+</form>
+
+<form action="/tag_group" method="POST">
+    {% for line in groups %}
+    {{line.fg_name}} with owner({{line.owner_email}}):<input type = "radio" name = "FriendGroupTag" value="{{line.fg_name}}"><input type = "hidden" name = "FriendGroupOwner" value = "{{line.owner_email}}"></input></input>
+    <br>
+    {% endfor %}
+    <input type="submit" value = "Add a friendGroupTag" />
+</form>
+
+
+{% for line in groups %}
+<form action="/share_post" method = "POST">
+{{line.fg_name}}:<input type = "radio" name = "group" value="{{line.fg_name}}"><input type = "hidden" name = "owner" value = "{{line.owner_email}}"></input></input>
+{% endfor %}
+  <br>
+  <input type="submit" value = "Share Post">
+</form>
+
+<form action="/edit_post" method="POST">
+    Item Name: <input type="text" name="item_name" placeholder="Item Name" />
+    File Path: <input type="text" name="file_path" placeholder="File Path" />
+    </br>
+    <input type="submit" value = "Edit Post" />
+</form>
+
 
 <br>
 Comments:
@@ -148,22 +169,6 @@ Friends Tagged in Picture:
 {% endfor %}
 </table>
 
-<br>
-<form action="/tag" method="POST">
-	<input type="text" name="friendTag" placeholder="Tagged" /> </br>
-	<input type="submit" value = "Add a friendTag" />
-</form>
-<br>
-
-<br>
-<form action="/tag_group" method="POST">
-	{% for line in groups %}
-	{{line.fg_name}} with owner({{line.owner_email}}):<input type = "radio" name = "FriendGroupTag" value="{{line.fg_name}}"><input type = "hidden" name = "FriendGroupOwner" value = "{{line.owner_email}}"></input></input>
-	<br>
-	{% endfor %}
-	<input type="submit" value = "Add a friendGroupTag" />
-</form>
-<br>
 
 <a href="/home">Return to home</a>
 <br>
