--- a/templates/show_publicposts.html
+++ b/templates/show_publicposts.html
@@ -29,6 +29,17 @@
 		display: inline-block;
 		width: 200px;
 	}
+    input[type="submit"] {
+        background-color: #75a7f9;
+        border: solid;
+        color: white;
+        text-align: center;
+        display: inline-block;
+        font-size: 12px;
+        margin: 1px 1px;
+        cursor: pointer;
+        border-radius: 25px;
+    }
 	</style>
 </head>
 <body>
@@ -65,7 +76,7 @@ Basic Info:
 	</tr>
 	{% endfor %}
 </table>
-<br>
+
 Comment:
 <br>
 <form action='/comment' method="POST">
@@ -80,7 +91,13 @@ Comment:
     😍<input type="radio" name="emoji" value="1" />
     😂<input type = "radio" name="emoji" value="2" />
     👍<input type="radio" name="emoji" value="3" />
+    <br>
     <input type="submit" value=rate />
+</form>
+
+<form action="/tag" method="POST">
+    <input type="text" name="friendTag" placeholder="Tagged Email" /> </br>
+    <input type="submit" value = "Add a friendTag" />
 </form>
 
 <br>
@@ -127,13 +144,6 @@ Friends Tagged in Picture:
 	</tr>
 {% endfor %}
 </table>
-
-<br>
-<form action="/tag" method="POST">
-	<input type="text" name="friendTag" placeholder="Tagged Email" /> </br>
-	<input type="submit" value = "Add a friendTag" />
-</form>
-<br>
 
 
 <br>
