--- a/templates/show_posts.html
+++ b/templates/show_posts.html
@@ -107,7 +107,7 @@ Comment:
     <input type="submit" value = "Add a friendTag" />
 </form>
 
-{% if group1 %}
+{% if groups %}
 <form action="/tag_group" method="POST">
     {% for line in groups %}
     {{line.fg_name}} with owner({{line.owner_email}}):<input type = "radio" name = "FriendGroupTag" value="{{line.fg_name}}"><input type = "hidden" name = "FriendGroupOwner" value = "{{line.owner_email}}"></input></input>
