--- a/templates/home.html
+++ b/templates/home.html
@@ -30,6 +30,17 @@
 			display: inline-block;
 			width: 200px;
 		}
+        input[type="submit"] {
+            background-color: #75a7f9;
+            border: solid;
+            color: white;
+            text-align: center;
+            display: inline-block;
+            font-size: 12px;
+            margin: 1px 1px;
+            cursor: pointer;
+            border-radius: 25px;
+        }
     h1{
       color: blue;
   	}
