--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,17 @@
         background-color: powderblue;
         font-family: 'Open Sans Condensed', sans-serif;
     }
+    input[type="submit"] {
+        background-color: #75a7f9;
+        border: solid;
+        color: white;
+        text-align: center;
+        display: inline-block;
+        font-size: 12px;
+        margin: 1px 1px;
+        cursor: pointer;
+        border-radius: 25px;
+    }
     </style>
 </head>
 <body>
