--- a/templates/shared_posts.html
+++ b/templates/shared_posts.html
@@ -21,16 +21,27 @@
         padding: 0.5rem;
         text-align: left;
     }
-		header {
+    header {
   		background-color: #466995;
   		border-bottom: 1px solid #466995;
   		width: 100%;
-		}
-		li{
-			color: white;
-			display: inline-block;
-			width: 200px;
-		}
+    }
+    li{
+        color: white;
+        display: inline-block;
+        width: 200px;
+    }
+    input[type="submit"] {
+        background-color: #75a7f9;
+        border: solid;
+        color: white;
+        text-align: center;
+        display: inline-block;
+        font-size: 12px;
+        margin: 1px 1px;
+        cursor: pointer;
+        border-radius: 25px;
+    }
     h1{
       color: blue;
   	}
